--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 826/826 [00:05<00:00, 151.11it/s]\n",
-      "100%|██████████| 822/822 [00:05<00:00, 160.03it/s]\n",
-      "100%|██████████| 827/827 [00:05<00:00, 159.44it/s]\n",
-      "100%|██████████| 395/395 [00:01<00:00, 242.04it/s]\n"
+      "100%|██████████| 826/826 [00:03<00:00, 249.14it/s]\n",
+      "100%|██████████| 822/822 [00:02<00:00, 279.20it/s]\n",
+      "100%|██████████| 827/827 [00:02<00:00, 287.65it/s]\n",
+      "100%|██████████| 395/395 [00:01<00:00, 342.47it/s]\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
     "    labels = []\n",
     "    images = []\n",
     "    for (name, index) in classes.items():\n",
-    "        curr_images = [elt for elt in os.listdir(os.path.join(path, name))] # This gets all images' names from all different folders\n",
+    "        curr_images = [elt for elt in os.listdir(os.path.join(path, name)) if 'Zone' not in elt] # This gets all images' names from all different folders\n",
     "\n",
     "        for img_name in tqdm(curr_images): # Iterate over all names from curr_images\n",
     "            path = os.path.join(path, name, img_name) # Get the path for every specific image\n",
