--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -72,26 +72,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1648"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "826 + 822"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [
@@ -117,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -136,8 +118,7 @@
     "for index, val in enumerate([0, 830, 1700, -1]):\n",
     "    plt.subplot(1, 4,index + 1)\n",
     "    plt.imshow(not_shuffled_x[val])\n",
-    "    plt.title(labels[index])\n",
-    "    "
+    "    plt.title(labels[index])"
    ]
   }
  ],
