model_2_with_ImageDataGenerator

--- a/model.ipynb
+++ b/model.ipynb
@@ -245,6 +245,17 @@
     "\n",
     "print(f'Chance level: {1./num_classes*100:.1f}%')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prediction():\n",
+    "    pred = model.predict(X_test)\n",
+    "    return pred"
+   ]
   }
  ],
  "metadata": {
